--- a/fluidifyLayout.css
+++ b/fluidifyLayout.css
@@ -20,6 +20,7 @@
   width: 80% !important;
 }
 
+/* sections */
 .page-margins {
   padding: 0.0em 0.5em !important;
 }
@@ -48,6 +49,11 @@
   display: none;
 }
 
+#requestContent {
+  min-width: auto !important;
+}
+
+/* buttons */
 #buttonContainer {
   background: #E6EFF6 !important;
 }
@@ -60,7 +66,7 @@
   margin: 2px !important;
 }
 
-.topButton1 div, .topButton2 div, .topButton3 div, .topButton4 div {
+.topButton1 div, .topButton2 div, .topButton3 div, .topButton4 div, .toolbarLine_title {
   width: auto !important;
 }
 
