--- a/fluidifyLayout.css
+++ b/fluidifyLayout.css
@@ -4,6 +4,7 @@
   padding-bottom: 0.5em;
 }
 
+/* sections */
 .page-margins {
   padding: 0.0em 0.5em !important;
 }
@@ -20,6 +21,11 @@
   background: #82AED1 !important;
 }
 
+#requestContent {
+  min-width: auto !important;
+}
+
+/* buttons */
 #buttonContainer {
   background: #E6EFF6 !important;
 }
@@ -32,7 +38,7 @@
   margin: 2px !important;
 }
 
-.topButton1 div, .topButton2 div, .topButton3 div, .topButton4 div {
+.topButton1 div, .topButton2 div, .topButton3 div, .topButton4 div, .toolbarLine_title {
   width: auto !important;
 }
 
